# Rewe

./: .env.example  .gitignore  CHANGELOG.md  DataAnalysis_Rewe.ipynb  DataAnalysis_Rewe_firststage.ipynb  README.md  README_REFACTORING.md  REFACTORING_SUMMARY.md  example_analysis.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/interim/: .gitkeep  README.md
data/processed/: README.md
data/raw/: README.md
notebooks/: README.md
src/rewe/: __init__.py  data.py  statistics.py  utils.py  visualization.py
tests/: test_data.py  test_utils.py
